--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "PingFang SC", sans-serif;
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
