feat(pro-table): rewrite ProTable and add some hooks for table

--- a/src/components/search-bar/search-bar.module.scss
+++ b/src/components/search-bar/search-bar.module.scss
@@ -14,7 +14,13 @@
   display: flex;
 
   .label {
+    display: flex;
+    align-items: center;
     flex-shrink: 0;
     user-select: none;
+  }
+
+  .label::after {
+    content: ":"
   }
 }
