--- a/src/components/pro-table/pro-table.module.scss
+++ b/src/components/pro-table/pro-table.module.scss
@@ -1,8 +1,22 @@
 .pro-table__container {
   width: 100%;
   height: 100%;
+
+  .table {
+    width: 100%;
+  }
 }
 
-.table {
-  width: 100%;
+.title-container {
+  display: flex;
+  align-items: center;
+
+  section.title {
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
+.actions-container {
+  margin-left: auto;
 }
